objects/Interactive_Modules_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>C1P_API_Endpoint__c</fullName>
        <label>C1P API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1P_API_Key__c</fullName>
        <label>C1P API Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Key__c</fullName>
        <label>Github Key</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Github_Readonly_Key__c</fullName>
        <label>Github Readonly Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Repository_URL__c</fullName>
        <label>Github Repository URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Job_Id__c</fullName>
        <label>Platform Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_API_Key__c</fullName>
        <label>Production API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Client_Key__c</fullName>
        <label>X-Client-Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Interactive Modules Setting</label>
    <pluralLabel>Interactive Modules Setting</pluralLabel>
</CustomObject>